@@ -1,67 +1,56 @@
-name: Docker EDU
+#
+# Build stage
+#
 
-on:      
-  workflow_dispatch:
-    inputs:
-      tags:
-        description: "Docker TAG"
-        required: true
-        default: "master"
-        
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+#### 1) Maven build
+#FROM  ghcr.io/shclub/maven:3.8.4-openjdk-17 AS MAVEN_BUILD
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
+#RUN mkdir -p build
+#WORKDIR /build
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+#COPY pom.xml ./
+#COPY src ./src
 
-      - name: Install cosign
-        if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@main
-        with:
-          cosign-release: 'v2.2.1' # 예시로 제시된 최신 안정 버전, 실제 사용 시 확인 필요
+#COPY . ./
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226
+#RUN mvn clean install -DskipTests
 
-      - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+## 2)  Maven Wrapper Build
 
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: ${{ github.event.inputs.tags }}
+FROM openjdk:17-jdk-slim AS MAVEN_BUILD
 
-      - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09
-        with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+RUN mkdir -p build
+WORKDIR /build
 
-      - name: Sign the published Docker image
-        if: ${{ github.event_name != 'pull_request' }}
-        env:
-          TAGS: ${{ steps.meta.outputs.tags }}
-          DIGEST: ${{ steps.build-and-push.outputs.digest }}
-        run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+COPY pom.xml ./
+COPY src ./src
+COPY mvnw ./
+COPY . ./
+
+RUN ./mvnw clean package -Dmaven.test.skip=true
+
+#
+# Package stage
+#
+# production environment
+
+FROM eclipse-temurin:17.0.2_8-jre-alpine
+# FROM ghcr.io/shclub/jre17-runtime:v1.0.0
+
+COPY --from=MAVEN_BUILD /build/target/*.jar app.jar
+
+# COPY elastic-apm-agent-1.43.0.jar /
+
+ENV TZ Asia/Seoul
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
+# ENV SPRING_PROFILES_ACTIVE dev
+ENV SPRING_PROFILES_ACTIVE prd
+
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XshowSettings:vm"
+ENV JAVA_OPTS="${JAVA_OPTS} -XX:+UseG1GC -XX:+UnlockDiagnosticVMOptions -XX:+G1SummarizeConcMark -XX:InitiatingHeapOccupancyPercent=35 -XX:G1ConcRefinementThreads=20"
+
+EXPOSE 80
+
+#ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar  app.jar "]
+ENTRYPOINT ["sh", "-c", "java -jar  app.jar "]
